--- a/trysome.html
+++ b/trysome.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="vssome.js"></script>
+    <script src="fatihmonth.js"></script>
 </body>
 </html>
